[package]
name = "vulkan-workspace"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ash = { git = "https://github.com/projectkml/ash "}
ash-window = { git = "https://github.com/projectkml/ash "}
winit = "0.28.1"
raw-window-handle = "0.5.0"
glam = "0.22.0"
shaderc = "0.8.2"